RESOLVED FIXED133294
importance_assertion -> denap_assertion
https://bugs.webkit.org/show_bug.cgi?id=133294
Summary importance_assertion -> denap_assertion
Gavin Barraclough
Reported 2014-05-26 19:02:03 PDT
API update.
Attachments
Fix (2.72 KB, patch)
2014-05-26 19:06 PDT, Gavin Barraclough
sam: review+
Gavin Barraclough
Comment 1 2014-05-26 19:06:56 PDT
Gavin Barraclough
Comment 2 2014-05-27 10:50:15 PDT
Fixed in r169388
Note You need to log in before you can comment on or make changes to this bug.